--- a/create-react-express/client/src/components/Footer/Footer.css
+++ b/create-react-express/client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 
 .footer {
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding-top: 15px;
     background: linear-gradient(to right, #103684 , #2047a1);
