--- a/create-react-express/client/src/pages/Home/Home.css
+++ b/create-react-express/client/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
 .sidenav {
     height: 50%;
     width: 250px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     
     right: 0;
