--- a/create-react-express/client/src/pages/Home/Home.css
+++ b/create-react-express/client/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 
 
 
-.sidenav {
+/* .sidenav {
     height: 50%;
     width: 250px;
     position: absolute;
@@ -10,8 +10,21 @@
     right: 0;
     overflow-x: hidden;
     padding-top: 20px;
-}
+} */
 
 h5 {
     color: #1b830b;
 }
+
+.sidenav {
+    overflow: hidden;
+    font-family: verdana;
+    font-size: 12px;
+    font-weight: 200;
+    /* background-color: #2e353d; */
+    position: fixed;
+    top: 210px;
+    width: 300px;
+    right: 0px;
+    height: 60%;
+  }
