--- a/create-react-express/client/src/index.css
+++ b/create-react-express/client/src/index.css
@@ -3,5 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   position: relative;
-	height: 100%;
+  height: 100%;
+  /* background-color: #DCDCDC	; */
 }
